--- a/scss/components/_portofolioPage.scss
+++ b/scss/components/_portofolioPage.scss
@@ -10,14 +10,14 @@
       
       padding: 3em 0em 0em;
       img {
-        width: 90%;
+        width: 90% !important;
         
         //height: 500px;
         //object-fit: contain;
         //object-position: center;
 
       }
-      .portofolioBtn {
+      a.portofolioBtn {
         display: block;
         margin: 5px auto;
         width: 45% !important;
@@ -27,6 +27,16 @@
         background-color: $footer-color;
         color: $footer-highlight;
         font-weight: lighter;
+        text-decoration: none;
+      
+      }
+
+      .portofolioHover {
+        //background-image: url('../img/screenshots/listmanager.gif');
+        img {
+          opacity: 0.8;
+        }
+        
       }
     }
   }
@@ -44,4 +54,43 @@
       min-height: fit-content;
     }
   }
+}
+
+
+.portofolioHover {
+    position: relative;
+    
+}
+
+.image {
+  opacity: 1;
+  width: 90%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.overlay {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.portofolioHover:hover .image {
+  opacity: 0.3;
+}
+
+.portofolioHover:hover .overlay {
+  opacity: 1;
+}
+
+.overlayContent {
+  background-color: $footer-color;
+  color: $footer-highlight;
+  font-size: 2em;
+  padding: 16px 32px;
 }
