--- a/scss/components/_aboutPage.scss
+++ b/scss/components/_aboutPage.scss
@@ -1,5 +1,6 @@
 #aboutPage {
   margin-top: 60px;
+  margin-bottom: $jumbotrons-margin-bottom !important;
   .aboutJumbotron {
     background-color: #ccc;
     }
