--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,7 @@ header nav .navStyle ul .currentPage {
 /* line 1, ../scss/components/_presentationPage.scss */
 #presentationPage {
   margin-top: 60px;
-  margin-bottom: -30px;
+  margin-bottom: -30px !important;
 }
 /* line 4, ../scss/components/_presentationPage.scss */
 #presentationPage h2 {
@@ -498,22 +498,31 @@ header nav .navStyle ul .currentPage {
 /* line 1, ../scss/components/_portofolioPage.scss */
 #portofolioPage {
   margin-top: 60px;
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content !important;
+  margin-bottom: -30px !important;
 }
-/* line 4, ../scss/components/_portofolioPage.scss */
+/* line 8, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron {
   min-height: -webkit-fit-content;
   min-height: -moz-fit-content;
   min-height: fit-content;
 }
-/* line 9, ../scss/components/_portofolioPage.scss */
+/* line 13, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron .portofolioComponents {
   padding: 3em 0em 0em;
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+  height: 600px;
 }
-/* line 12, ../scss/components/_portofolioPage.scss */
+/* line 19, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron .portofolioComponents img {
   width: 90% !important;
+  height: auto;
 }
-/* line 20, ../scss/components/_portofolioPage.scss */
+/* line 27, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron .portofolioComponents a.portofolioBtn {
   display: block;
   margin: 5px auto;
@@ -526,31 +535,40 @@ header nav .navStyle ul .currentPage {
   font-weight: lighter;
   text-decoration: none;
 }
-/* line 36, ../scss/components/_portofolioPage.scss */
+/* line 43, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron .portofolioComponents .portofolioHover img {
   opacity: 0.8;
 }
+/* line 47, ../scss/components/_portofolioPage.scss */
+#portofolioPage .portofolioJumbotron .portofolioComponents #listImgDiv, #portofolioPage .portofolioJumbotron .portofolioComponents #listGifDiv {
+  margin-bottom: 2em !important;
+}
 
 @media screen and (min-width: 992px) {
-  /* line 47, ../scss/components/_portofolioPage.scss */
+  /* line 58, ../scss/components/_portofolioPage.scss */
   #portofolioPage {
-    margin: 0px !important;
+    margin: 0px;
     margin-bottom: -30px !important;
   }
-  /* line 50, ../scss/components/_portofolioPage.scss */
+  /* line 61, ../scss/components/_portofolioPage.scss */
   #portofolioPage .portofolioJumbotron {
     height: 93.8vh;
     min-height: -webkit-fit-content;
     min-height: -moz-fit-content;
     min-height: fit-content;
   }
+
+  /* line 69, ../scss/components/_portofolioPage.scss */
+  .overlayContent {
+    font-size: 2em !important;
+  }
 }
-/* line 60, ../scss/components/_portofolioPage.scss */
+/* line 75, ../scss/components/_portofolioPage.scss */
 .portofolioHover {
   position: relative;
 }
 
-/* line 65, ../scss/components/_portofolioPage.scss */
+/* line 79, ../scss/components/_portofolioPage.scss */
 .image {
   opacity: 1;
   width: 90%;
@@ -559,53 +577,61 @@ header nav .navStyle ul .currentPage {
   backface-visibility: hidden;
 }
 
-/* line 73, ../scss/components/_portofolioPage.scss */
+/* line 87, ../scss/components/_portofolioPage.scss */
 .overlay {
   transition: .5s ease;
   opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 87%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
 
-/* line 83, ../scss/components/_portofolioPage.scss */
+/* line 98, ../scss/components/_portofolioPage.scss */
 .portofolioHover:hover .image {
   opacity: 0.3;
 }
 
-/* line 87, ../scss/components/_portofolioPage.scss */
+/* line 102, ../scss/components/_portofolioPage.scss */
 .portofolioHover:hover .overlay {
   opacity: 1;
 }
 
-/* line 91, ../scss/components/_portofolioPage.scss */
+/* line 106, ../scss/components/_portofolioPage.scss */
 .overlayContent {
   background-color: #191919;
   opacity: 0.8;
   color: #7f8c8d;
-  font-size: 1.6em;
+  font-size: 1.5em;
   font-weight: bold;
-  padding: 0.3em 15.8em;
+  padding: 0.3em;
 }
 
+@media handheld {
+  /* line 117, ../scss/components/_portofolioPage.scss */
+  #portofolioPage {
+    margin: 60px !important;
+  }
+}
 /* line 1, ../scss/components/_aboutPage.scss */
 #aboutPage {
   margin-top: 60px;
+  margin-bottom: -30px !important;
 }
-/* line 3, ../scss/components/_aboutPage.scss */
+/* line 4, ../scss/components/_aboutPage.scss */
 #aboutPage .aboutJumbotron {
   background-color: #ccc;
 }
 
 @media screen and (min-width: 992px) {
-  /* line 9, ../scss/components/_aboutPage.scss */
+  /* line 10, ../scss/components/_aboutPage.scss */
   #aboutPage {
     margin: 0px !important;
     margin-bottom: -30px !important;
   }
-  /* line 12, ../scss/components/_aboutPage.scss */
+  /* line 13, ../scss/components/_aboutPage.scss */
   #aboutPage .aboutJumbotron {
     height: 93.8vh;
   }
@@ -613,15 +639,16 @@ header nav .navStyle ul .currentPage {
 /* line 2, ../scss/components/_contactPage.scss */
 #contactPage {
   margin-top: 60px;
+  margin-bottom: -10px;
 }
-/* line 4, ../scss/components/_contactPage.scss */
+/* line 5, ../scss/components/_contactPage.scss */
 #contactPage .contactJumbotron {
   min-height: -webkit-fit-content;
   min-height: -moz-fit-content;
   min-height: fit-content;
   height: 65vh;
 }
-/* line 9, ../scss/components/_contactPage.scss */
+/* line 10, ../scss/components/_contactPage.scss */
 #contactPage .contactJumbotron #map {
   height: 100%;
   width: 100%;
@@ -629,12 +656,12 @@ header nav .navStyle ul .currentPage {
 }
 
 @media screen and (min-width: 992px) {
-  /* line 18, ../scss/components/_contactPage.scss */
+  /* line 19, ../scss/components/_contactPage.scss */
   #contactPage {
     margin: 0px !important;
     margin-bottom: -30px !important;
   }
-  /* line 21, ../scss/components/_contactPage.scss */
+  /* line 22, ../scss/components/_contactPage.scss */
   #contactPage .contactJumbotron {
     min-height: -webkit-fit-content;
     min-height: -moz-fit-content;
