--- a/scss/components/_contactPage.scss
+++ b/scss/components/_contactPage.scss
@@ -1,6 +1,7 @@
 
 #contactPage {
   margin-top: 60px;
+   margin-bottom: -10px;
   .contactJumbotron {
     min-height: -webkit-fit-content;
     min-height: -moz-fit-content;
@@ -27,3 +28,4 @@
     }
   }
 }
+
