--- a/scss/components/_presentationPage.scss
+++ b/scss/components/_presentationPage.scss
@@ -1,6 +1,6 @@
 #presentationPage {
   margin-top: 60px;
-  margin-bottom: -30px;
+  margin-bottom: $jumbotrons-margin-bottom !important;
   h2 {
     margin-bottom: 1em;
   }
