--- a/css/main.css
+++ b/css/main.css
@@ -567,36 +567,44 @@ header nav .navStyle ul .currentPage {
 #portofolioPage .portofolioJumbotron .portofolioComponents img {
   width: 90% !important;
   height: auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.69);
 }
 /* line 27, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron .portofolioComponents a.portofolioBtn {
   display: block;
-  margin: 5px auto;
+  margin: 10px auto;
   width: 45% !important;
   height: 40px;
+  line-height: 40px;
   border: none;
   font-size: 1.5em;
   background-color: #191919;
   color: #7f8c8d;
   font-weight: lighter;
   text-decoration: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.7), 0 6px 20px 0 rgba(0, 0, 0, 0.69);
 }
-/* line 43, ../scss/components/_portofolioPage.scss */
+/* line 42, ../scss/components/_portofolioPage.scss */
+#portofolioPage .portofolioJumbotron .portofolioComponents a.portofolioBtn:hover {
+  transform: scale(0.97, 0.97);
+  transition: 0.6s;
+}
+/* line 50, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron .portofolioComponents .portofolioHover img {
   opacity: 0.8;
 }
-/* line 47, ../scss/components/_portofolioPage.scss */
+/* line 54, ../scss/components/_portofolioPage.scss */
 #portofolioPage .portofolioJumbotron .portofolioComponents #listImgDiv, #portofolioPage .portofolioJumbotron .portofolioComponents #listGifDiv {
   margin-bottom: 2em !important;
 }
 
 @media screen and (min-width: 992px) {
-  /* line 58, ../scss/components/_portofolioPage.scss */
+  /* line 65, ../scss/components/_portofolioPage.scss */
   #portofolioPage {
     margin: 0px;
     margin-bottom: -30px !important;
   }
-  /* line 61, ../scss/components/_portofolioPage.scss */
+  /* line 68, ../scss/components/_portofolioPage.scss */
   #portofolioPage .portofolioJumbotron {
     height: 93.8vh;
     min-height: -webkit-fit-content;
@@ -604,26 +612,26 @@ header nav .navStyle ul .currentPage {
     min-height: fit-content;
   }
 
-  /* line 69, ../scss/components/_portofolioPage.scss */
+  /* line 76, ../scss/components/_portofolioPage.scss */
   .overlayContent {
     font-size: 2em !important;
   }
 }
-/* line 75, ../scss/components/_portofolioPage.scss */
+/* line 82, ../scss/components/_portofolioPage.scss */
 .portofolioHover {
   position: relative;
 }
 
-/* line 79, ../scss/components/_portofolioPage.scss */
+/* line 86, ../scss/components/_portofolioPage.scss */
 .image {
-  opacity: 1;
-  width: 90%;
+  opacity: 0.3;
+  width: 100%;
   height: auto;
   transition: .5s ease;
   backface-visibility: hidden;
 }
 
-/* line 87, ../scss/components/_portofolioPage.scss */
+/* line 94, ../scss/components/_portofolioPage.scss */
 .overlay {
   transition: .5s ease;
   opacity: 0;
@@ -635,17 +643,17 @@ header nav .navStyle ul .currentPage {
   -ms-transform: translate(-50%, -50%);
 }
 
-/* line 98, ../scss/components/_portofolioPage.scss */
+/* line 105, ../scss/components/_portofolioPage.scss */
 .portofolioHover:hover .image {
   opacity: 0.3;
 }
 
-/* line 102, ../scss/components/_portofolioPage.scss */
+/* line 109, ../scss/components/_portofolioPage.scss */
 .portofolioHover:hover .overlay {
   opacity: 1;
 }
 
-/* line 106, ../scss/components/_portofolioPage.scss */
+/* line 113, ../scss/components/_portofolioPage.scss */
 .overlayContent {
   background-color: #191919;
   opacity: 0.8;
@@ -654,9 +662,18 @@ header nav .navStyle ul .currentPage {
   font-weight: bold;
   padding: 0.3em;
 }
+/* line 120, ../scss/components/_portofolioPage.scss */
+.overlayContent a {
+  text-decoration: none;
+  color: #7f8c8d;
+}
+/* line 124, ../scss/components/_portofolioPage.scss */
+.overlayContent a:hover {
+  color: white;
+}
 
 @media handheld {
-  /* line 117, ../scss/components/_portofolioPage.scss */
+  /* line 131, ../scss/components/_portofolioPage.scss */
   #portofolioPage {
     margin: 60px !important;
   }
@@ -668,16 +685,24 @@ header nav .navStyle ul .currentPage {
 }
 /* line 4, ../scss/components/_aboutPage.scss */
 #aboutPage .aboutJumbotron {
-  background-color: #ccc;
+  background-color: transparent;
+}
+/* line 7, ../scss/components/_aboutPage.scss */
+#aboutPage #aboutVlad {
+  background-color: #aaa;
+}
+/* line 10, ../scss/components/_aboutPage.scss */
+#aboutPage #aboutAndreea {
+  background-color: #bbb;
 }
 
 @media screen and (min-width: 992px) {
-  /* line 10, ../scss/components/_aboutPage.scss */
+  /* line 17, ../scss/components/_aboutPage.scss */
   #aboutPage {
-    margin: 0px !important;
+    margin-top: 0px !important;
     margin-bottom: -30px !important;
   }
-  /* line 13, ../scss/components/_aboutPage.scss */
+  /* line 20, ../scss/components/_aboutPage.scss */
   #aboutPage .aboutJumbotron {
     height: 93.8vh;
   }
