--- a/scss/components/_aboutPage.scss
+++ b/scss/components/_aboutPage.scss
@@ -1,5 +1,5 @@
 #aboutPage {
-  margin-top: 60px;
+  //margin-top: 60px;
   margin-bottom: $jumbotrons-margin-bottom !important;
   .aboutJumbotron {
     background-color: transparent;
@@ -15,7 +15,7 @@
 
 @media screen and (min-width: 992px) {
   #aboutPage {
-    margin-top: 0px !important;
+    //margin-top: -45px !important;
     margin-bottom: $jumbotrons-margin-bottom !important;
     .aboutJumbotron {
       height: 93.8vh;
