--- a/scss/components/_contactPage.scss
+++ b/scss/components/_contactPage.scss
@@ -1,6 +1,6 @@
 
 #contactPage {
-  margin-top: 60px;
+  //margin-top: 60px;
    margin-bottom: -10px;
   .contactJumbotron {
     min-height: -webkit-fit-content;
@@ -17,7 +17,7 @@
 
 @media screen and (min-width: 992px) {
   #contactPage {
-    margin: 0px !important;
+    //margin: 0px !important;
     margin-bottom: $jumbotrons-margin-bottom !important;
     .contactJumbotron {
       min-height: -webkit-fit-content;
