--- a/scss/components/_presentationPage.scss
+++ b/scss/components/_presentationPage.scss
@@ -1,5 +1,5 @@
 #presentationPage {
-  margin-top: 60px;
+  //margin-top: 60px;
   margin-bottom: $jumbotrons-margin-bottom !important;
   h2 {
     margin-bottom: 1em;
