--- a/scss/components/_aboutPage.scss
+++ b/scss/components/_aboutPage.scss
@@ -1,5 +1,9 @@
 #aboutPage {
   //margin-top: 60px;
+  height: -webkit-fit-content;
+      height: -moz-fit-content;
+      height: fit-content;
+      height: 700px;
   margin-bottom: $jumbotrons-margin-bottom !important;
   .aboutJumbotron {
     background-color: transparent;
