--- a/scss/components/_portofolioPage.scss
+++ b/scss/components/_portofolioPage.scss
@@ -1,21 +1,21 @@
 #portofolioPage {
   //margin-top: 60px;
-  min-height: -webkit-fit-content;
-  min-height: -moz-fit-content;
-  min-height: fit-content !important;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content !important;
   margin-bottom: $jumbotrons-margin-bottom !important;
 
   .portofolioJumbotron {
-    min-height: -webkit-fit-content;
-    min-height: -moz-fit-content;
-    min-height: fit-content;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
     //height: 800px;
     .portofolioComponents {
       padding: 3em 0em 0em;
-      min-height: -webkit-fit-content;
-      min-height: -moz-fit-content;
-      min-height: fit-content;
-      height: 600px;
+      height: -webkit-fit-content;
+      height: -moz-fit-content;
+      height: fit-content;
+      height: 700px;
       img {
         width: 90% !important;
         height: auto;
