--- a/css/main.css
+++ b/css/main.css
@@ -542,7 +542,7 @@ header nav .navStyle ul .currentPage {
 }
 /* line 1, ../scss/components/_portofolioPage.scss */
 #portofolioPage {
-  min-height: fit-content 100% !important;
+  min-height: fit-content !important;
   height: 1700px;
 }
 /* line 7, ../scss/components/_portofolioPage.scss */
@@ -675,16 +675,16 @@ header nav .navStyle ul .currentPage {
   /* line 144, ../scss/components/_portofolioPage.scss */
   #portofolioPage {
     margin-bottom: -30px !important;
-  }
-  /* line 146, ../scss/components/_portofolioPage.scss */
-  #portofolioPage .portofolioJumbotron {
     height: 93.8vh;
+  }
+  /* line 147, ../scss/components/_portofolioPage.scss */
+  #portofolioPage .portofolioJumbotron {
     min-height: -webkit-fit-content;
     min-height: -moz-fit-content;
     min-height: fit-content;
   }
 
-  /* line 154, ../scss/components/_portofolioPage.scss */
+  /* line 155, ../scss/components/_portofolioPage.scss */
   .overlayContent {
     font-size: 2em !important;
   }
