--- a/scss/components/_aboutPage.scss
+++ b/scss/components/_aboutPage.scss
@@ -1,14 +1,11 @@
 #aboutPage {
-  min-height: -webkit-fit-content;
-  min-height: -moz-fit-content;
-  min-height: fit-content;
+  min-height: 100%;
   height: 1175px;
   
 
   .aboutJumbotron {
-    min-height: -webkit-fit-content;
-    min-height: -moz-fit-content;
-    min-height: fit-content;
+    min-height: 50%;
+    height: 50%;
     img {
       width: 60%;
     }
