--- a/scss/components/_portofolioPage.scss
+++ b/scss/components/_portofolioPage.scss
@@ -1,14 +1,17 @@
 #portofolioPage {
-  min-height: 100% !important;
+  min-height: fit-content  !important;
   height: 1700px;
+   margin-bottom: -35px !important;
   .portofolioJumbotron {
     min-height: 100%;
     height: 100%;
+   
     .portofolioComponents {
       padding: 3em 0em 0em;
       min-height: -webkit-fit-content;
       min-height: -moz-fit-content;
       min-height: fit-content;
+      
       img {
         width: 90% !important;
         height: auto;
