almost donne -culori

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -6,3 +6,10 @@ $footer-highlight: #7F8C8D;
 $raleway: 'Raleway', sans-serif;
 $roboto: 'Roboto', sans-serif;
 $jumbotrons-margin-bottom: -30px;
+$odd-background: #fff;
+$odd-text: #333;
+$even-background: #ccc;
+$even-text: #333;
+$header-background: #fff;
+$header-highlight: #333;
+$header-logo: #fff;
