--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -29,3 +29,13 @@ body {
     padding-bottom: $footer-height-desktop !important;
   }
 }
+
+h2.heading2 {
+	//font-weight: bold;
+	padding-bottom: 15px;
+	box-shadow: 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+}
+p, h1, h3, h4, h5, h6 {
+	font-weight: normal;
+}
+
