--- a/scss/components/_aboutPage.scss
+++ b/scss/components/_aboutPage.scss
@@ -1,106 +1,127 @@
 #aboutPage {
   min-height: fit-content;
-  height: 1175px;
-  
+  background-color: $even-background;
+  .container {
+    width: 95%;
+    padding-top: 3em;
+  }
+  h2 {
+    color: $even-text;
+  }
 
-  .aboutJumbotron {
-    min-height: 50%;
-    height: 50%;
-    img {
-      width: 60%;
+  .aboutContainer {
+    min-height: 100%;
+    height: 100%;
+
+    .aboutComponents {
+      .teamMember {
+        line-height: 1.6em;
+        margin: 2em 0em;
+        img {
+          width: 60%;
+        }
+        h3 {
+          color: $even-text;
+          padding: 8px 0px;
+        }
+        h4 {
+          color: $even-text;
+        }
+        p {
+          color: $even-text;
+          padding: 15px 0px;
+          font-size: 1.3em;
+        }
+      }
     }
-  }
-    #aboutVlad {
-      background-color: #aaa;
-      margin-bottom: 0px !important;
-    }
-    #aboutAndreea {
-      background-color:  #bbb;
-      margin-bottom: 0px !important;
-    }
-  
+   
+  } 
 }
 
-@media screen and (min-width: 535px)
-and (max-width: 580.9999px) {
-  #aboutPage {
-    height: 1200px;
-  }
-}
+// @media screen and (min-width: 535px)
+// and (max-width: 580.9999px) {
+//   #aboutPage {
+//     height: 1200px;
+//   }
+// }
 
-@media screen and (min-width: 581px)
-and (max-width: 640.9999px) {
-  #aboutPage {
-    height: 1245px;
-  }
-}
+// @media screen and (min-width: 581px)
+// and (max-width: 640.9999px) {
+//   #aboutPage {
+//     height: 1245px;
+//   }
+// }
 
-@media screen and (min-width: 641px)
-and (max-width: 680.9999px) {
-  #aboutPage {
-    height: 1285px;
-  }
-}
+// @media screen and (min-width: 641px)
+// and (max-width: 680.9999px) {
+//   #aboutPage {
+//     height: 1285px;
+//   }
+// }
 
-@media screen and (min-width: 681px)
-and (max-width: 740.9999px) {
-  #aboutPage {
-    height: 1330px;
-  }
-}
+// @media screen and (min-width: 681px)
+// and (max-width: 740.9999px) {
+//   #aboutPage {
+//     height: 1330px;
+//   }
+// }
 
-@media screen and (min-width: 741px)
-and (max-width: 767.9999px)  {
-  #aboutPage {
-    height: 1375px;
-  }
-}
+// @media screen and (min-width: 741px)
+// and (max-width: 767.9999px)  {
+//   #aboutPage {
+//     height: 1375px;
+//   }
+// }
 
-@media screen and (min-width: 768px)
-and (max-width: 840.9999px)   {
-  #aboutPage {
-    height: 1475px;
-  }
-}
+// @media screen and (min-width: 768px)
+// and (max-width: 840.9999px)   {
+//   #aboutPage {
+//     height: 1475px;
+//   }
+// }
 
-@media screen and (min-width: 841px)
-and (max-width: 890.9999px)  {
-  #aboutPage {
-    height: 1535px;
-  }
-}
+// @media screen and (min-width: 841px)
+// and (max-width: 890.9999px)  {
+//   #aboutPage {
+//     height: 1535px;
+//   }
+// }
 
-@media screen and (min-width: 841px)
-and (max-width: 890.9999px)  {
-  #aboutPage {
-    height: 1535px;
-  }
-}
+// @media screen and (min-width: 841px)
+// and (max-width: 890.9999px)  {
+//   #aboutPage {
+//     height: 1535px;
+//   }
+// }
 
-@media screen and (min-width: 891px)
-and (max-width: 940.9999px) {
-   #aboutPage {
-    height: 1595px;
-  }
-}
+// @media screen and (min-width: 891px)
+// and (max-width: 940.9999px) {
+//    #aboutPage {
+//     height: 1595px;
+//   }
+// }
 
-@media screen and (min-width: 941px)
-and (max-width: 991.9999px) {
-   #aboutPage {
-    height: 1655px;
-  }
-}
+// @media screen and (min-width: 941px)
+// and (max-width: 991.9999px) {
+//    #aboutPage {
+//     height: 1655px;
+//   }
+// }
 
 
 
 @media screen and (min-width: 992px) {
   #aboutPage {
-   
-    height: 93.8vh;
-    .aboutJumbotron {
-      height: 93.8vh;
-      //width: 50vw;
-       margin-bottom:  0px !important;
+    height: 97vh;
+
+    .container {
+      height: 100%;
     }
+
+    // .aboutJumbotron {
+    //   height: 93.8vh;
+    //   //width: 50vw;
+    //    margin-bottom:  0px !important;
+    // }
   }
 }
