--- a/scss/components/_presentationPage.scss
+++ b/scss/components/_presentationPage.scss
@@ -1,143 +1,73 @@
 #presentationPage {
-  margin-bottom: $jumbotrons-margin-bottom !important;
-  h2 {
-    margin-bottom: 1em;
+  min-height: fit-content;
+  background-color: $even-background;
+  .container {
+    width: 95%;
+    padding-top: 3em;
   }
-  .presentationJumbotron {
-    min-height: -webkit-fit-content;
-    min-height: -moz-fit-content;
-    min-height: fit-content;
 
-    margin: 0;
+  .presentationContainer {
+    min-height: fit-content;
+    background-color: $odd-background;
     p {
-      font-size: 15px !important;
-      padding: 5px;
+      color: $odd-text;
+    }
+    .container {
+      width: 33.3333%;
+      
+    }
+
+    padding-bottom: 2em;
+    img {
+      width: 10em;
+    }
+    p {
+      font-size: 1.2em;
+      padding: 5px 0px;
     }
   }
 
-  .offerJumbotron {
-    background-color: #ccc;
-    min-height: -webkit-fit-content;
-    min-height: -moz-fit-content;
+  .servicesContainer {
+    background-color: $even-background;
     min-height: fit-content;
-    height: 70vh;
-    
-    ul.offerList {
-      margin: 0 auto;
-      width: 90%;
-      text-align: justify;
-      li {
-        width: 33% !important;
-        display: inline-block !important;
-        padding: 1.5em;
+    padding-bottom: 3em;
+     h2.heading2 {
+      color: $even-text;
+    }
+    .servicesComponents{
+      padding: 2em 0em;
+      .services {
+        padding: 0.5em 0em;
         img {
-          width: 7em;
-          display: inline-block;
+          width: 4.5em;
           
         }
+       
         p {
-          display: inline-block;
-          margin-top: 40px;
-          margin-left: 0.5em;
+          color: $even-text;
+          font-size: 1.13em;
+          margin-top: 20px;
+          margin-left: 4.5em;
         }
       } 
     }
   }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 350px) 
+and (max-width: 419.9999px){
   #presentationPage {
-    .presentationJumbotron {
-      height: 23.8vh;
-      p {
-        font-size: 15px !important;
-        padding: 5px;
-      }
-    }
-
-    // .offerJumbotron {
-    //   height: 70vh;
-    //   .offerComponent {
-    //     width: 100% !important;
-    //     img {
-    //       width: 6em !important;
-    //     }
-    //     p {
-    //       margin-top: 30px !important;
-    //       margin-left: 5em;
-    //       font-size: 130%;
-    //     }
-    //   }
-    // }
-  } 
-}
-
-@media screen and (max-width: 1489.99999px)
-and (min-width: 1233px) {
-  #presentationPage {
-
-    .offerJumbotron {
-      
-      ul.offerList {
-        width: 95%;
-        li {
-          width: 33% !important;
-          padding: 1em;
+    .servicesContainer {
+      .servicesComponents{
+        .services {
           img {
-            width: 6em;
-          }
-          p {
-            margin-top: 30px;
-          }
-        } 
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 1232.9999px)
-and (min-width: 1104px) {
-  #presentationPage {
-
-    .offerJumbotron {
-      
-      ul.offerList {
-        width: 98%;
-        li {
-          width: 33% !important;
-          padding: 0.7em;
-          img {
-            width: 5.8em;
+            width: 5em;
             
           }
           p {
-            margin-top: 30px;
-            font-size: 1.4em;
-          }
-        } 
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 1103.9999px)
-and (min-width: 997px) {
-  #presentationPage {
-
-    .offerJumbotron {
-      
-      ul.offerList {
-        width: 100%;
-        li {
-          margin: 0 auto !important;
-          width: 33% !important;
-          padding: 0.6em;
-          img {
-            width: 5.3em;
-          }
-          p {
-            margin-top: 30px;
             font-size: 1.3em;
+            margin-top: 25px;
+            margin-left: 4.1em;
           }
         } 
       }
@@ -145,49 +75,20 @@ and (min-width: 997px) {
   }
 }
 
-@media screen and (max-width: 996.9999px)
-and (min-width: 933px) {
+@media screen and (min-width: 420px)
+and (max-width: 819.9999px) {
   #presentationPage {
-
-    .offerJumbotron {
-      
-      ul.offerList {
-        width: 100%;
-        li {
-          margin: 0 auto !important;
-          width: 33% !important;
-          padding: 0.6em;
+    .servicesContainer {
+      .servicesComponents{
+        .services {
           img {
-            width: 5.1em;
+            width: 6em;
+            
           }
           p {
-            margin-top: 30px;
-            font-size: 1.2em;
-          }
-        } 
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 932.9999px)
-and (min-width: 783px) {
-  #presentationPage {
-
-    .offerJumbotron {
-      
-      ul.offerList {
-        width: 95%;
-        li {
-          margin: 0 auto !important;
-          width: 48% !important;
-          padding: 0.7em;
-          img {
-            width: 5.8em;
-          }
-          p {
-            margin-top: 30px;
             font-size: 1.4em;
+            margin-top: 30px;
+            margin-left: 4.4em;
           }
         } 
       }
@@ -195,24 +96,20 @@ and (min-width: 783px) {
   }
 }
 
-@media screen and (max-width: 782.9999px)
-and (min-width: 664px) {
+@media screen and (min-width: 820px)
+and (max-width: 991.9999px) {
   #presentationPage {
-
-    .offerJumbotron {
-      
-      ul.offerList {
-        width: 95%;
-        li {
-          margin: 0 auto !important;
-          width: 49% !important;
-          padding: 0.5em;
+    .servicesContainer {
+      .servicesComponents{
+        .services {
           img {
-            width: 5.4em;
+            width: 6.5em;
+            
           }
           p {
-            margin-top: 20px;
-            font-size: 1.2em;
+            font-size: 1.5em;
+            margin-top: 35px;
+            margin-left: 4.5em;
           }
         } 
       }
@@ -220,49 +117,33 @@ and (min-width: 664px) {
   }
 }
 
-@media screen and (max-width: 663.9999px) 
-and (min-width: 594px) {
-  #presentationPage {
 
-    .offerJumbotron {
-      
-      ul.offerList {
-        width: 98%;
-        li {
-          margin: 0 auto !important;
-          width: 49% !important;
-          padding: 0.5em;
+
+@media screen and (min-width: 992px) {
+  #presentationPage {
+    height: 97vh;
+
+    .container {
+      height: 100%;
+    }
+  }
+}
+
+
+@media screen and (min-width: 1050px)
+and (max-width: 1149.9999px) {
+  #presentationPage {
+    .servicesContainer {
+      .servicesComponents{
+        .services {
           img {
             width: 5em;
+            
           }
           p {
-            margin-top: 20px;
-            font-size: 1.1em;
-          }
-        } 
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 593.9999px) 
-and (min-width: 419px) {
-  #presentationPage {
-
-    .offerJumbotron {
-      
-      ul.offerList {
-        width: 80%;
-        li {
-          margin: 0 auto !important;
-          width: 100% !important;
-          padding: 0.7em;
-          img {
-            width: 5.5em;
-          }
-          p {
-            margin-top: 20px;
             font-size: 1.3em;
+            margin-top: 25px;
+            margin-left: 4.5em;
           }
         } 
       }
@@ -270,23 +151,43 @@ and (min-width: 419px) {
   }
 }
 
-@media screen and (max-width: 418.9999px) {
-  #presentationPage {
 
-    .offerJumbotron {
-      
-      ul.offerList {
-        width: 96%;
-        li {
-          margin: 0 auto !important;
-          width: 100% !important;
-          padding: 0.5em;
+@media screen and (min-width: 1150px)
+and (max-width: 1249.9999px) {
+  #presentationPage {
+    .servicesContainer {
+      .servicesComponents{
+        .services {
           img {
-            width: 5.2em;
+            width: 6em;
+            
           }
           p {
-            margin-top: 20px;
-            font-size: 1.2em;
+            font-size: 1.4em;
+            margin-top: 30px;
+            margin-left: 5em;
+          }
+        } 
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1250px)
+ {
+  #presentationPage {
+    .servicesContainer {
+      .servicesComponents{
+        .services {
+          padding: 1em 0em;
+          img {
+            width: 7em;
+            
+          }
+          p {
+            font-size: 1.5em;
+            margin-top: 35px;
+            margin-left: 5em;
           }
         } 
       }
