--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,7 @@
 .headerStyle {
     box-shadow: 0 12px 12px -12px rgba(0, 0, 0, 0.5) !important;
-    background-color: #fff;
+    background-color: $header-background;
+    height: 65px;
 }
 
 header {
@@ -10,10 +11,8 @@ header {
   font-size: 14px !important;
 
     .logo {
-      background-color: #eee;
-      padding: 0.25em;
-      padding-top: 0.9em;
-      padding-bottom: 0.3em;
+      background-color: $header-logo;
+      padding: 0.5em 0.5em 0em;
       img {
         width: 4em !important;
       }
@@ -22,21 +21,26 @@ header {
     .navStyle {
       ul {
         li {
-          padding: 0.5em;
+          padding: 0.65em 0.505em;
           font-family: $raleway;
           margin: 0 !important;
+           color: $header-highlight;
           i {
-            font-size: 2em;
+            font-size: 1.9em;
             display: block;
             text-align: center;
+            color: $header-highlight;
           }
         }
         li:active,
         li:focus,
         li:active:focus,
         .currentPage {
-          background-color: #333 !important;
-          color: white !important;
+          background-color: $header-highlight !important;
+          color: $header-background !important;
+          i{
+            color: $header-background !important;
+          }
         }
       }
     }
