--- a/css/main.css
+++ b/css/main.css
@@ -326,46 +326,47 @@ header nav .navStyle ul .currentPage i {
   background-color: white;
   padding-bottom: 2em;
 }
-/* line 12, ../scss/components/_presentationPage.scss */
+/* line 15, ../scss/components/_presentationPage.scss */
 #presentationPage .presentationContainer p {
   color: #333333;
 }
-/* line 15, ../scss/components/_presentationPage.scss */
+/* line 18, ../scss/components/_presentationPage.scss */
 #presentationPage .presentationContainer .container {
-  width: 33.3333%;
+  width: 95%;
+  background-color: white;
 }
-/* line 21, ../scss/components/_presentationPage.scss */
+/* line 24, ../scss/components/_presentationPage.scss */
 #presentationPage .presentationContainer img {
   width: 10em;
 }
-/* line 24, ../scss/components/_presentationPage.scss */
+/* line 27, ../scss/components/_presentationPage.scss */
 #presentationPage .presentationContainer p {
   font-size: 1.2em;
   padding: 5px 0px;
 }
-/* line 30, ../scss/components/_presentationPage.scss */
+/* line 33, ../scss/components/_presentationPage.scss */
 #presentationPage .servicesContainer {
   background-color: #cccccc;
   min-height: fit-content;
   padding-bottom: 3em;
 }
-/* line 34, ../scss/components/_presentationPage.scss */
+/* line 37, ../scss/components/_presentationPage.scss */
 #presentationPage .servicesContainer h2.heading2 {
   color: #333333;
 }
-/* line 37, ../scss/components/_presentationPage.scss */
+/* line 40, ../scss/components/_presentationPage.scss */
 #presentationPage .servicesContainer .servicesComponents {
   padding: 2em 0em;
 }
-/* line 39, ../scss/components/_presentationPage.scss */
+/* line 42, ../scss/components/_presentationPage.scss */
 #presentationPage .servicesContainer .servicesComponents .services {
   padding: 0.5em 0em;
 }
-/* line 41, ../scss/components/_presentationPage.scss */
+/* line 44, ../scss/components/_presentationPage.scss */
 #presentationPage .servicesContainer .servicesComponents .services img {
   width: 4.5em;
 }
-/* line 46, ../scss/components/_presentationPage.scss */
+/* line 49, ../scss/components/_presentationPage.scss */
 #presentationPage .servicesContainer .servicesComponents .services p {
   color: #333333;
   font-size: 1.13em;
@@ -374,11 +375,11 @@ header nav .navStyle ul .currentPage i {
 }
 
 @media screen and (min-width: 350px) and (max-width: 419.9999px) {
-  /* line 63, ../scss/components/_presentationPage.scss */
+  /* line 66, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services img {
     width: 5em;
   }
-  /* line 67, ../scss/components/_presentationPage.scss */
+  /* line 70, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services p {
     font-size: 1.3em;
     margin-top: 25px;
@@ -386,77 +387,101 @@ header nav .navStyle ul .currentPage i {
   }
 }
 @media screen and (min-width: 420px) and (max-width: 819.9999px) {
-  /* line 84, ../scss/components/_presentationPage.scss */
+  /* line 87, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services img {
     width: 6em;
   }
-  /* line 88, ../scss/components/_presentationPage.scss */
+  /* line 91, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services p {
     font-size: 1.4em;
     margin-top: 30px;
     margin-left: 4.4em;
   }
+  /* line 100, ../scss/components/_presentationPage.scss */
+  #presentationPage .presentationContainer .container {
+    width: 80%;
+  }
 }
 @media screen and (min-width: 820px) and (max-width: 991.9999px) {
-  /* line 105, ../scss/components/_presentationPage.scss */
+  /* line 113, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services img {
     width: 6.5em;
   }
-  /* line 109, ../scss/components/_presentationPage.scss */
+  /* line 117, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services p {
     font-size: 1.5em;
     margin-top: 35px;
     margin-left: 4.5em;
   }
+  /* line 126, ../scss/components/_presentationPage.scss */
+  #presentationPage .presentationContainer .container {
+    width: 60%;
+  }
 }
 @media screen and (min-width: 992px) {
-  /* line 123, ../scss/components/_presentationPage.scss */
+  /* line 136, ../scss/components/_presentationPage.scss */
   #presentationPage {
     height: 97vh;
   }
-  /* line 126, ../scss/components/_presentationPage.scss */
+  /* line 139, ../scss/components/_presentationPage.scss */
   #presentationPage .container {
     height: 100%;
   }
+  /* line 143, ../scss/components/_presentationPage.scss */
+  #presentationPage .presentationContainer .container {
+    width: 50%;
+  }
 }
 @media screen and (min-width: 1050px) and (max-width: 1149.9999px) {
-  /* line 139, ../scss/components/_presentationPage.scss */
+  /* line 157, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services img {
     width: 5em;
   }
-  /* line 143, ../scss/components/_presentationPage.scss */
+  /* line 161, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services p {
     font-size: 1.3em;
     margin-top: 25px;
     margin-left: 4.5em;
   }
+  /* line 170, ../scss/components/_presentationPage.scss */
+  #presentationPage .presentationContainer .container {
+    width: 40%;
+  }
 }
 @media screen and (min-width: 1150px) and (max-width: 1249.9999px) {
-  /* line 161, ../scss/components/_presentationPage.scss */
+  /* line 184, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services img {
     width: 6em;
   }
-  /* line 165, ../scss/components/_presentationPage.scss */
+  /* line 188, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services p {
     font-size: 1.4em;
     margin-top: 30px;
     margin-left: 5em;
   }
+  /* line 197, ../scss/components/_presentationPage.scss */
+  #presentationPage .presentationContainer .container {
+    width: 33.3333%;
+  }
 }
 @media screen and (min-width: 1250px) {
-  /* line 181, ../scss/components/_presentationPage.scss */
+  /* line 209, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services {
     padding: 1em 0em;
   }
-  /* line 183, ../scss/components/_presentationPage.scss */
+  /* line 211, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services img {
     width: 7em;
   }
-  /* line 187, ../scss/components/_presentationPage.scss */
+  /* line 215, ../scss/components/_presentationPage.scss */
   #presentationPage .servicesContainer .servicesComponents .services p {
     font-size: 1.5em;
     margin-top: 35px;
     margin-left: 5em;
+  }
+  /* line 224, ../scss/components/_presentationPage.scss */
+  #presentationPage .presentationContainer .container {
+    width: 33.3333%;
   }
 }
 /* line 1, ../scss/components/_portofolioPage.scss */
